--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "kill-port": "^2.0.1",
     "lite-server": "^2.6.1",
     "process": "^0.11.10",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "typedoc": "^0.26.7",
+    "typedoc-plugin-markdown": "^4.2.7",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0",
-    "kill-port": "^2.0.1",
-    "typedoc-plugin-markdown": "^4.2.7"
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "@types/node": "^22.5.5",
