--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "kill-port": "^2.0.1",
     "lite-server": "^2.6.1",
+    "memfs": "^4.12.0",
     "process": "^0.11.10",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
