--- a/package.json
+++ b/package.json
@@ -6,32 +6,36 @@
   "scripts": {
     "build": "tsc",
     "docs": "typedoc",
-    "test": "jest src",
-    "start:node": "tsc && node dist/index.mjs"
+    "tests": "jest src",
+    "start:node": "tsc && node dist/index.mjs",
+    "build:production": "node buildProduction.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
+  },
+  "lint-staged": {
+    "*": [
+      "npm run test"
+    ]
+  },
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "assert": "^2.1.0",
+    "exec": "^0.2.1",
+    "husky": "^9.1.6",
+    "inquirer": "^11.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "kill-port": "^2.0.1",
-    "lite-server": "^2.6.1",
     "memfs": "^4.12.0",
-    "process": "^0.11.10",
+    "shelljs": "^0.8.5",
     "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.1",
-    "typedoc": "^0.26.7",
-    "typedoc-plugin-markdown": "^4.2.7",
-    "typescript": "^5.6.2",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
-  },
-  "dependencies": {
-    "@types/node": "^22.5.5",
-    "path": "^0.12.7"
+    "typedoc": "^0.23.10",
+    "typescript": "^4.9.5"
   }
 }
