--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,17 @@ jobs:
             - name: Checkout code
               uses: actions/checkout@v2
 
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: "22"
+
+            - name: Install dependencies
+              run: npm install
+
+            - name: Run tests
+              run: npm run test
+
             - name: Create GitHub Release
               id: create_release
               uses: actions/create-release@v1
