--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "docs": "typedoc",
     "test": "jest src",
+    "test:coverage": "jest src --coverage",
     "start:node": "tsc && node dist/index.mjs",
     "build:production": "node buildProduction.mjs"
   },
