--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "ts-jest": "^29.2.5",
     "typedoc": "^0.23.10",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2",
+    "process": "^0.11.10"
   }
 }
